# QtDisplayCalibration

./: CMakeLists.txt  ColorGradientBar.qml  ColorSlider.qml  Main.qml  README.md  display.cpp  display.h  main.cpp
